<resources>
    <string name="app_name">Filen</string>
</resources>
