...
import { Icon } from "@roninoss/icons"
import Transfers from "../drive/header/transfers"
import alerts from "@/lib/alerts"
import useNetInfo from "@/hooks/useNetInfo"
import OfflineListHeader from "../offlineListHeader"

export const Home = memo(() => {
	const { colors } = useColorScheme()
	const [refreshing, setRefreshing] = useState<boolean>(false)
	const router = useRouter()
	const { hasInternet } = useNetInfo()

	const recents = useCloudItemsQuery({
...
