...
		"notEnoughDiskSpace": "Not enough local disk space available.",
		"sharingNotAvailable": "Sharing is not available on this device."
	},
	"alertPrompt": {
		"defaults": {
			"title": "Title",
			"okText": "OK",
			"cancelText": "Cancel"
		},
		"exportMasterKeys": {
			"title": "Export master keys",
			"message": "You have not exported your master keys yet. It is highly recommended to export them now and store them in a safe place.",
			"okText": "Export",
			"cancelText": "Later"
		},
		"storageUsageOverLimit": {
			"title": "Storage usage over limit",
			"message": "You have exceeded your storage limit. Please free up some space or upgrade your plan to prevent unwanted data deletion.",
			"okText": "Upgrade",
			"cancelText": "Later"
...
			"cancelText": "Cancel"
		}
	},
	"drive": {
		"header": {
			"title": {
				"drive": "Drive",
				"selected": "{{count}} selected",
				"recents": "Recents",
				"favorites": "Favorites",
				"sharedIn": "Shared with you",
				"sharedOut": "Shared with others",
				"offline": "Available offline",
				"links": "Public links",
				"trash": "Trash"
			},
			"rightView": {
				"actionSheet": {
					"upload": {
						"files": "Upload files",
						"directory": "Upload directory",
						"media": "Upload media",
						"uploaded": "{{name}} uploaded"
					},
					"create": {
						"textFile": "Create text file",
						"directory": "Create directory",
						"photo": "Take photo",
						"created": "{{name}} created"
					},
					"cancel": "Cancel",
					"noMediaPermissions": "You need to grant media permissions to upload photos or videos.",
					"itemsUploaded": "{{count}} items uploaded",
...
					"selectAll": "Select all",
					"deselectAll": "Deselect all",
					"info": "Info",
					"rename": "Rename",
					"move": "Move",
					"copyId": "Copy ID",
					"delete": "Delete",
					"trash": "Trash",
					"restore": "Restore",
					"preview": "Preview",
					"deletePermanently": "Delete permanently",
					"open": "Open",
					"color": "Color",
					"copyPath": "Copy path",
					"makeAvailableOffline": "Make available offline",
					"removeOffline": "Remove offline file",
					"downloadFolder": "Download folder",
...
				"confirm": "Restore",
				"cancel": "Cancel"
			}
		}
	},
	"home": {
		"title": "Home",
		"container": {
			"recents": {
				"title": "Recents"
			},
			"favorites": {
				"title": "Favorites"
...
			"draft": "Draft",
			"you": "You",
			"noMessages": "No messages yet"
		}
	},
	"notes": {
		"title": "Notes",
		"list": {
			"footer": "{{count}} items",
			"empty": "No notes yet",
			"emptySearch": "No note found for this search",
			"error": "There was an error loading your notes, please try again later"
		},
...
				"emptySearch": "No participant found for this search",
				"error": "There was an error loading the participants, please try again later"
			}
		},
		"tags": {
			"names": {
				"all": "All",
				"favorited": "Favorited",
				"archived": "Archived",
				"pinned": "Pinned",
				"shared": "Shared",
				"trash": "Trash"
			},
...
			}
		},
		"header": {
			"title": "Notes",
			"selected": "{{count}} selected",
			"menu": {
				"settings": "Settings"
			},
			"dropdown": {
				"types": {
					"markdown": "Markdown",
					"checklist": "Checklist",
					"text": "Text",
...
				"deleteFilePermanently": "{{name}} deleted permanently",
				"deleteAll": "All directories and files deleted permanently",
				"codeRedeemed": "Code \"{{code}}\" redeemed",
				"baseFolderCreated": "Base folder created",
				"deleteFolderPermanently": "{{name}} deleted permanently",
				"deleteUnfinished": "Unfinished uploads deleted",
				"login": "Logged in",
				"deleteVersioned": "All versioned files deleted",
				"emailChangeAttempt": "Email change attempted",
				"emailChanged": "Email changed",
				"passwordChanged": "Password changed",
				"failedLogin": "Failed login attempt",
				"fileLinkEdited": "Public link for {{name}} edited",
...
				"fileVersioning": "File versioning",
				"fileVersioningInfo": "Enable file versioning to keep track of changes made to your files.",
				"loginAlerts": "Login alerts",
				"loginAlertsInfo": "Receive alerts when your account is accessed.",
				"deleteVersionedFiles": "Delete versioned files",
				"deleteAllFilesAndDirectories": "Delete all files and directories",
				"logout": "Logout",
				"requestAccountDeletion": "Request account deletion",
				"requestAccountDeletionInfo": "Request account deletion. We will send you an email with further instructions."
			},
			"prompts": {
				"logout": {
					"title": "Logout",
...
						"placeholder": "New email address"
					},
					"confirmEmail": {
						"title": "Confirm new email address",
						"placeholder": "Confirm new email address"
					},
					"password": {
						"title": "Your password",
						"placeholder": "Password"
					}
				},
				"updateNickname": {
					"title": "Update nickname",
...
					"title": "Edit"
				}
			}
		}
	},
	"photos": {
		"title": "Photos",
		"list": {
			"empty": "No photos yet",
			"emptySearch": "No photos found for this search",
			"error": "There was an error loading your photos, please try again later"
		},
		"state": {
...
		},
		"header": {
			"selected": "{{count}} selected"
		},
		"settings": {
			"albums": {
				"title": "Albums",
				"item": {
					"subTitle": "{{count}} items"
				},
				"list": {
					"empty": "No albums found",
					"emptySearch": "No albums found for this search",
...
			"index": {
				"title": "Settings",
				"items": {
					"enabled": "Enabled",
					"albums": "Albums",
					"albumsInfo": "Select which albums to include in the camera upload.",
					"cloudDirectory": "Cloud directory",
					"cloudDirectoryNotSet": "Not set",
					"videos": "Videos",
					"videosInfo": "Include videos in the camera upload.",
					"cellular": "Cellular",
					"cellularInfo": "Allow camera upload over cellular data. This can lead to high data usage.",
					"background": "Background",
...
		"registrationSuccessful": "Registration successful! Please check your email to confirm your account.",
		"index": {
			"hero": {
				"1": "End-to-end encrypted",
				"2": "Cloud Platform"
			},
			"signUp": "Sign up for free",
			"login": "Log in"
		},
		"login": {
			"title": "Log in",
			"header": {
				"cancel": "Cancel"
			},
...
			"next": "Next",
			"submit": "Log in",
			"errors": {
				"emptyFields": "Please fill out all fields."
			},
			"form": {
				"email": {
					"label": "Email address",
					"placeholder": "Enter your email address"
				},
				"password": {
					"label": "Password",
					"placeholder": "Enter your password"
...
		"unsavedChanges": "Unsaved changes"
	},
	"selectContacts": {
		"header": {
			"selectContacts": "Select contacts",
			"cancel": "Cancel",
			"done": "Done",
			"selectContact": "Select contact"
		},
		"toolbar": {
			"selected": "{{countOrName}} selected"
		},
		"list": {
...
			"title": "Playlists"
		}
	},
	"transfers": {
		"header": {
			"title": "Transfers",
			"back": "Back"
		},
		"info": "Transferring {{ongoingTransfers}} items at {{speed}}, {{remaining}} remaining",
		"noOngoingTransfers": "No ongoing transfers",
		"list": {
			"empty": "No transfers yet",
			"emptySearch": "No transfers found for this search",
...
	},
	"textEditor": {
		"header": {
			"back": "Back"
		},
		"unsavedChanges": "Unsaved changes",
		"savedSuccess": "Saved successfully",
		"saved": "Saved"
	},
	"contacts": {
		"menu": {
			"remove": "Remove",
			"block": "Block",
...
