...
	if (!isAuthed) {
		return <Redirect href="/(auth)" />
	}

	return (
		<View
			testID="screen.tabs"
			className="flex-1"
		>
			<Tabs
				initialRouteName={initialRouteName ?? "home"}
				screenOptions={tabsOptions}
			>
...
