...
					return (
						<View className="flex flex-row items-center">
							<Button
								variant="plain"
								size="icon"
								onPress={openSettings}
								testID="home.avatar"
							>
								<Avatar
									source={avatarSource}
									style={{
										width: 24,
										height: 24
...
