...
		<View className="flex-row items-center">
			{selectedItemsCount === 0 && (
				<Fragment>
					<Transfers />
					{allowed.upload && (
						<Button
							testID="drive.header.rightView.plus"
							variant="plain"
							size="icon"
							onPress={onPlusPress}
						>
							<Icon
								size={24}
...
