...
			<View className="flex-row items-center">
				<DropdownMenu
					items={createNoteDropdownItems}
					onItemPress={onCreateNoteDropdownPress}
				>
					<Button
						testID="notes.header.rightView.plus"
						variant="plain"
						size="icon"
					>
						<Icon
							name="plus"
							size={24}
...
