...
import { useColorScheme } from "@/lib/useColorScheme"
import { Toolbar, ToolbarCTA, ToolbarIcon } from "../nativewindui/Toolbar"
import { getPreviewType } from "@/lib/utils"
import * as FileSystem from "expo-file-system"
import paths from "@/lib/paths"
import { randomUUID } from "expo-crypto"
import fullScreenLoadingModal from "../modals/fullScreenLoadingModal"
import alerts from "@/lib/alerts"
import { KeyboardAvoidingView } from "react-native-keyboard-controller"
import * as Sharing from "expo-sharing"
import Container from "../Container"
import mimeTypes from "mime-types"
import useHTTPServer from "@/hooks/useHTTPServer"
...
		)
	}, [query.status, exportFile, value.length])

	const toolbarRightView = useMemo(() => {
		return (
			<ToolbarCTA
				testID="texteditor.save_button"
				disabled={item.type !== "cloud" || !didChange || query.status !== "success"}
				onPress={save}
				icon={{
					name: "check"
				}}
			/>
...
