...
	}, [createDirectory, selectRoot, canSubmitRoot, canSubmitParent, selectParent, parent])

	const rightView = useMemo(() => {
		return (
			<Fragment>
				<ToolbarCTA
					testID="selectDriveItems.toolbar.submit"
					disabled={!canSubmit}
					icon={{
						name: "check"
					}}
					onPress={submit}
				/>
...
