...
	return (
		<DropdownMenu
			items={dropdownItems}
			onItemPress={onItemPress}
		>
			<Button
				testID="photos.header.rightView.dropdown"
				variant="plain"
				size="icon"
				hitSlop={10}
			>
				<Icon
					size={24}
...
