...

		return [
			{
				id: "0",
				title: translateMemoized("photos.settings.index.items.enabled"),
				rightView: (
					<View testID="photos.settings.enabled">
						<Toggle
							value={
								cameraUpload.enabled && permissions?.granted && cameraUploadParentExists && cameraUpload.albums.length > 0
							}
							onValueChange={toggleEnabled}
						/>
...
