appId: io.filen.app
name: 'Drive, User can enable the file provider and see created directory in the native Files app'
tags:
  - drive
  - android
env:
  DIRNAME: test_dir
  FILES_APP_ID: com.google.android.documentsui
onFlowComplete:
  # Cleanup
  - launchApp
  - runFlow:
      file: ../common/drive_item_delete.yaml
      env:
        ITEM: ${DIRNAME}
  - runFlow:
      file: ../common/drive_item_delete_permanently.yaml
      env:
        ITEM: ${DIRNAME}
---
- runFlow: ../login.yaml

- launchApp: ${FILES_APP_ID}
- tapOn: Show roots
- assertNotVisible: Filen

- launchApp
- tapOn: Home
- tapOn:
    id: home.header.rightView.dropdown
- tapOn: Settings
- tapOn:
    id: home.settings.fileProvider.toggle
- runFlow:
    file: ../common/create_dir.yaml
    env:
      DIRNAME: ${DIRNAME}

- launchApp: ${FILES_APP_ID}
- tapOn: Show roots
- tapOn: Filen
- scrollUntilVisible:
    element: ${DIRNAME}
