appId: io.filen.app
name: "Auth, User cannot login with incorrect credentials"
tags:
  - auth
---
- launchApp:
    clearState: true
- extendedWaitUntil:
    visible: Log in
    timeout: 60000
- tapOn: Log in
- scrollUntilVisible:
    element:
      id: email
- tapOn:
    id: email
- inputRandomEmail
- scrollUntilVisible:
    element:
      id: password
- tapOn:
    id: password
- inputRandomText
- tapOn:
    id: login
- extendedWaitUntil:
    notVisible:
      id: fullScreenLoadingModal
    timeout: 60000
- assertVisible:
    id: screen.auth
- assertNotVisible:
    id: screen.tabs
