appId: io.filen.app
name: "Auth, User can log out"
tags:
  - auth
---
- runFlow: ./login_success.yaml
- tapOn:
    id: home.avatar
- tapOn:
    id: settings.account
- scrollUntilVisible:
    element: Logout
- tapOn: Logout
- tapOn: OK
- assertVisible: Sign up for free
- assertVisible: Log in