appId: io.filen.app
---
- tapOn: Drive
- tapOn:
    id: drive.header.rightView.plus
- tapOn: Create directory
- runFlow:
    file: input-text-retry.yaml
    env: 
      TEXT: ${DIRNAME}
- tapOn: OK
- assertVisible: ${DIRNAME} created