appId: io.filen.app
---
# - runFlow: ../login.yaml
- tapOn: Notes
- tapOn:
    id: notes.header.rightView.plus
- tapOn:
    text: ${NOTE_TYPE}
    index: 0
- runFlow:
    file: "input-text-retry.yaml"
    env: 
      TEXT: ${NOTE_NAME}
- tapOn: OK
