appId: io.filen.app
---
# Trash
- scrollUntilVisible:
    element:
      id: notes.item.${NOTE_NAME}
- longPressOn:
    id: notes.item.${NOTE_NAME}
- scrollUntilVisible:
    element:
      text: Trash
# TODO: come up with better way to click on the right trash icon (testID)
# right now the trahs at index 0 could be the filter button
- tapOn:
    text: Trash
    index: 1
    optional: true
- tapOn: Trash
- tapOn: OK
# Permanently delete
- scrollUntilVisible:
    element:
      id: notes.item.${NOTE_NAME}
- longPressOn:
    id: notes.item.${NOTE_NAME}
- scrollUntilVisible:
    element:
      text: Delete
- tapOn: Delete
- tapOn: OK