appId: io.filen.app
name: 'Drive, User can create a directory'
tags:
  - drive
env:
  DIRNAME: new_dir
onFlowComplete:
  # Cleanup
  - runFlow:
      file: ../common/drive_item_delete.yaml
      env:
        ITEM: ${DIRNAME}
  - runFlow:
      file: ../common/drive_item_delete_permanently.yaml
      env:
        ITEM: ${DIRNAME}
---
- runFlow: ../login.yaml
- tapOn: Drive
- tapOn:
    id: drive.header.rightView.plus
- tapOn: Create directory
- runFlow:
    file: '../common/input-text-retry.yaml'
    env:
      TEXT: ${DIRNAME}
- tapOn: OK
- extendedWaitUntil:
    notVisible:
      id: fullScreenLoadingModal
    timeout: 120000
- assertVisible: ${DIRNAME} created
