appId: io.filen.app
name: "Drive, User can create a text file"
tags:
  - drive
env:
  FILENAME: new_text
  CONTENT: some new content here
---
- runFlow: ../login.yaml
- tapOn: Drive
- tapOn:                                  # Create new text file
    id: drive.header.rightView.plus
- tapOn: Create text file
- runFlow:
    file: "../common/input-text-retry.yaml"
    env: 
      TEXT: ${FILENAME}
- tapOn: OK
- extendedWaitUntil:
    notVisible:
      id: fullScreenLoadingModal
    timeout: 120000
- tapOn: \n
- runFlow:
    file: "../common/input-text-retry.yaml"
    env: 
      TEXT: ${CONTENT}
- runFlow:                                # Dismiss keyboard on iOS
    when:
      platform: iOS
    commands:
      - tapOn: Done
- runFlow:                                # Dismiss keyboard on Android
    when:
      platform: Android
    commands:
      - hideKeyboard
- tapOn:
    id: texteditor.save_button
- extendedWaitUntil:
    notVisible:
      id: fullScreenLoadingModal
    timeout: 60000
- assertVisible: Saved successfully
- waitForAnimationToEnd
- runFlow:
    file: ../common/back.yaml
    env:
      IOS_BACK_BUTTON: Back
- tapOn: ${FILENAME}.txt.*                # Check that content was saved
- assertVisible: ${CONTENT}
- back
- runFlow:
    when:
      platform: iOS
    commands:
      - tapOn: Back
- runFlow:
    file: ../common/drive_item_delete.yaml
    env:
      ITEM: ${FILENAME}.txt
- runFlow:
    file: ../common/drive_item_delete_permanently.yaml
    env:
      ITEM: ${FILENAME}.txt
