appId: io.filen.app
env:
  EMAIL: ${EMAIL}
  PASSWORD: ${PASSWORD}
---
- launchApp:
    clearState: true
- extendedWaitUntil:
    visible: Log in
    timeout: 120000
- tapOn: Log in
- scrollUntilVisible:
    element:
      id: email
- tapOn:
    id: email
- inputText:
    label: Enter the test user's email
    text: ${EMAIL}
- scrollUntilVisible:
    element:
      id: password
- tapOn:
    id: password
- inputText:
    label: Enter the test user's password
    text: ${PASSWORD}
- assertVisible:
    text: Log in
    enabled: true
- tapOn:
    id: login
- extendedWaitUntil:
    visible:
      id: screen.tabs
    timeout: 120000
- tapOn:
    text: Later
    optional: true
